<resources>
    <string name="app_name">2048</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Game 2048, powered by DIM</string>
    <string name="nav_header_subtitle">albert.moky@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="title_activity_room">RoomActivity</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_4">4</string>
    <string name="num_8">8</string>
    <string name="num_16">16</string>
    <string name="num_32">32</string>
    <string name="num_64">64</string>
    <string name="num_128">128</string>
    <string name="num_256">256</string>
    <string name="num_512">512</string>
    <string name="num_1024">1024</string>
    <string name="num_2048">2048</string>
    <string name="num_4096">4096</string>
    <string name="num_8192">8192</string>
    <string name="num_16384">16384</string>
    <string name="num_32768">32768</string>

    <string name="chat_hint">Input text message here...</string>

    <string name="server_connecting">Connecting</string>
    <string name="server_connected">Connected</string>
    <string name="server_handshaking">Handshaking</string>
    <string name="server_error">Network Error</string>
    <string name="server_default">Waiting</string>
</resources>
